function changest removelast()